--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -34,20 +34,6 @@ jobs:
     if: ${{ !github.event.pull_request.draft }}
     uses: ./.github/workflows/check-repo-files.yml
 
-  deployable_check:
-    name: Check if must build & deploy from environment
-    runs-on: ubuntu-latest
-    needs: check_repo_files
-    env:
-      IS_DEPLOYABLE: ${{ secrets.AR_DOCKER_USERNAME != '' && needs.check_repo_files.outputs.buildChanges == 'true' }}
-    outputs:
-      isDeployable: ${{ steps.set_output.outputs.is_deployable }}
-    steps:
-      - name: set output
-        id: set_output
-        run: |
-          echo "is_deployable=$IS_DEPLOYABLE" >> $GITHUB_OUTPUT
-
   install_python_dependencies:
     name: Install and cache Python dependencies
     uses: ./.github/workflows/install-python-dependencies.yml
@@ -61,28 +47,16 @@ jobs:
             searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
             coverageReport: coverage-elasticsearch-8.8.2
             runsOn: ubuntu-latest
-          # - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:8.0.1
-          #   searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
-          #   coverageReport: coverage-elasticsearch-8.0.1
-          #   runsOn: ubuntu-latest
-          # - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:7.17.11
-          #   searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
-          #   coverageReport: coverage-elasticsearch-7.17.11
-          #   runsOn: ubuntu-latest
-          # - searchEngineDockerImage: opensearchproject/opensearch:2.4.1
-          #   searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
-          #   coverageReport: coverage-opensearch-2.4.1
-          #   runsOn: ubuntu-latest
-          # - searchEngineDockerImage: opensearchproject/opensearch:1.3.11
-          #   searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
-          #   coverageReport: coverage-opensearch-1.3.11
-          #   runsOn: ubuntu-latest
+          - searchEngineDockerImage: opensearchproject/opensearch:2.4.1
+            searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
+            coverageReport: coverage-opensearch-2.4.1
+            runsOn: ubuntu-latest
     name: Run unit tests
     uses: ./.github/workflows/run-python-tests.yml
     needs:
       - check_repo_files
       - install_python_dependencies
-    # if: needs.check_repo_files.outputs.pythonChanges == 'true'
+    if: needs.check_repo_files.outputs.pythonChanges == 'true'
     with:
       searchEngineDockerImage: ${{ matrix.searchEngineDockerImage }}
       searchEngineDockerEnv: ${{ matrix.searchEngineDockerEnv }}
@@ -143,7 +117,7 @@ jobs:
     name: Run frontend tests
     uses: ./.github/workflows/run-frontend-tests.yml
     needs: check_repo_files
-    # if: needs.check_repo_files.outputs.frontendChanges == 'true'
+    if: needs.check_repo_files.outputs.frontendChanges == 'true'
 
   push_coverage:
     name: Upload code coverage
@@ -152,28 +126,31 @@ jobs:
       - run_unit_tests
       - run_integration_tests
     steps:
-      - name: Checkout Code 🛎
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v3
+
       - name: Copy all reports
         run: find coverage-report*/ -name "*.xml" -exec mv '{}' . \;
+
       - name: Display current files structure
         run: ls -R
+
       - name: Upload Coverage reports to Codecov 📦
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
 
   build_python_package:
     name: Build Argilla python package
     uses: ./.github/workflows/build-python-package.yml
     needs:
-      - deployable_check
+      - check_repo_files
       - run_unit_tests
       - run_unit_test_with_extra_engines
       - run_integration_tests
       - run_frontend_tests
     if: |
       !cancelled() &&
-      needs.deployable_check.outputs.isDeployable == 'true' &&
+      needs.check_repo_files.outputs.buildChanges == 'true' &&
       !contains(needs.*.result, 'failure') &&
       !contains(needs.*.result, 'cancelled')
     secrets: inherit
